{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 45,
  "lineage": "86680ec2-8cc2-2119-b26a-ce7ab8fd56ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055d15d9cfddf7bd3",
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:instance/i-09cbce74221fb1a1b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cbce74221fb1a1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e43f61a8aa0afbe",
            "private_dns": "ip-172-31-11-105.ap-southeast-1.compute.internal",
            "private_ip": "172.31.11.105",
            "public_dns": "ec2-13-229-128-17.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.128.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0176e03f63b126fef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-24810541",
            "tags": {
              "Name": "instanceA"
            },
            "tags_all": {
              "Name": "instanceA"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-3d4bdd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055d15d9cfddf7bd3",
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:instance/i-00a6778974686aafc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a6778974686aafc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04881467f8334ab1d",
            "private_dns": "ip-172-31-2-41.ap-southeast-1.compute.internal",
            "private_ip": "172.31.2.41",
            "public_dns": "ec2-13-229-127-170.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.127.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0936546c9c6cd7435",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-24810541",
            "tags": {
              "Name": "instanceB"
            },
            "tags_all": {
              "Name": "instanceB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-3d4bdd58"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:internet-gateway/igw-035562638940f8ff8",
            "id": "igw-035562638940f8ff8",
            "owner_id": "494526681395",
            "tags": {
              "Name": "igwA"
            },
            "tags_all": {
              "Name": "igwA"
            },
            "vpc_id": "vpc-007ef054014d8c1ce"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:internet-gateway/igw-0bddbc6d71f41e400",
            "id": "igw-0bddbc6d71f41e400",
            "owner_id": "494526681395",
            "tags": {
              "Name": "igwB"
            },
            "tags_all": {
              "Name": "igwB"
            },
            "vpc_id": "vpc-0287ec32e66045f9a"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:route-table/rtb-09fd97ce2ded70abc",
            "id": "rtb-09fd97ce2ded70abc",
            "owner_id": "494526681395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035562638940f8ff8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_tableA"
            },
            "tags_all": {
              "Name": "route_tableA"
            },
            "timeouts": null,
            "vpc_id": "vpc-007ef054014d8c1ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:route-table/rtb-004b62d17b02e12d1",
            "id": "rtb-004b62d17b02e12d1",
            "owner_id": "494526681395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bddbc6d71f41e400",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_tableB"
            },
            "tags_all": {
              "Name": "route_tableB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0287ec32e66045f9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:subnet/subnet-0ee48f65d35bf1ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0ee48f65d35bf1ebe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "494526681395",
            "tags": {
              "Name": "subnetA"
            },
            "tags_all": {
              "Name": "subnetA"
            },
            "vpc_id": "vpc-007ef054014d8c1ce"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:subnet/subnet-0f2612c3f7faf4e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.0/16",
            "id": "subnet-0f2612c3f7faf4e6a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "494526681395",
            "tags": {
              "Name": "subnetB"
            },
            "tags_all": {
              "Name": "subnetB"
            },
            "vpc_id": "vpc-0287ec32e66045f9a"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:vpc/vpc-007ef054014d8c1ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0513a22ac59eea3cd",
            "default_route_table_id": "rtb-017c3a2cc45206904",
            "default_security_group_id": "sg-05126af6ccf7191e7",
            "dhcp_options_id": "dopt-6c6b8309",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-007ef054014d8c1ce",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017c3a2cc45206904",
            "owner_id": "494526681395",
            "tags": {
              "Name": "vpcA"
            },
            "tags_all": {
              "Name": "vpcA"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:494526681395:vpc/vpc-0287ec32e66045f9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c40973c9d4b4ea46",
            "default_route_table_id": "rtb-0416d54773cc251c6",
            "default_security_group_id": "sg-0b6f1835d81a69929",
            "dhcp_options_id": "dopt-6c6b8309",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0287ec32e66045f9a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0416d54773cc251c6",
            "owner_id": "494526681395",
            "tags": {
              "Name": "vpcB"
            },
            "tags_all": {
              "Name": "vpcB"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-05ea44e90698a4076",
            "peer_owner_id": "494526681395",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-0287ec32e66045f9a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "vpcA-to-vpcB"
            },
            "tags_all": {
              "Name": "vpcA-to-vpcB"
            },
            "vpc_id": "vpc-007ef054014d8c1ce"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    }
  ]
}